WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14911
REGRESSION: Clicking in pasted text doesn't position the insertion point correctly
https://bugs.webkit.org/show_bug.cgi?id=14911
Summary
REGRESSION: Clicking in pasted text doesn't position the insertion point corr...
Alexey Proskuryakov
Reported
2007-08-09 04:57:46 PDT
Steps to reproduce: 1) Type something in "Add comment" textarea of this bug. 2) Copy some text from the page (e.g. "Nobody" from Assigned To). 3) Paste it in the textarea. 4) Click inside the pasted text. Results: the insertion point is positioned before the pasted text. Clicking in typed text works fine.
Attachments
Allow the last leaf child to be returned from closestLeafChildForXPos
(38.21 KB, patch)
2007-08-10 02:08 PDT
,
mitz
justin.garcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-08-09 14:39:16 PDT
I think this regressed in <
http://trac.webkit.org/projects/webkit/changeset/22037
> which made it impossible for closestLeafChildForXPos() to return the last leaf.
mitz
Comment 2
2007-08-10 01:15:07 PDT
Here is a non-forms test case: <div style="line-height: 3;">Lorem <!-- comment --> ipsum</div> You can drag just above the text (where the cursor is still an arrow, not an I-beam) to select individual letters from "Lorem", but not from "ipsum" -- either it's selected or not.
mitz
Comment 3
2007-08-10 02:08:23 PDT
Created
attachment 15896
[details]
Allow the last leaf child to be returned from closestLeafChildForXPos Includes change log and layout test. No layout test regressions.
Adele Peterson
Comment 4
2007-08-10 11:25:44 PDT
<
rdar://problem/5397344
>
Justin Garcia
Comment 5
2007-08-10 15:10:59 PDT
Comment on
attachment 15896
[details]
Allow the last leaf child to be returned from closestLeafChildForXPos r=me
Adele Peterson
Comment 6
2007-08-10 15:25:08 PDT
Committed revision 24999.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug