LayoutTests:

Reviewed by Justin.

        - test for <rdar://problem/5397344> http://bugs.webkit.org/show_bug.cgi?id=14911
          REGRESSION: Clicking in pasted text doesn't position the insertion point correctly

        * editing/selection/inline-closest-leaf-child-expected.checksum: Added.
        * editing/selection/inline-closest-leaf-child-expected.png: Added.
        * editing/selection/inline-closest-leaf-child-expected.txt: Added.
        * editing/selection/inline-closest-leaf-child.html: Added.

WebCore:

        Reviewed by Justin.

        - fix <rdar://problem/5397344> http://bugs.webkit.org/show_bug.cgi?id=14911
          REGRESSION: Clicking in pasted text doesn't position the insertion point correctly

        Test: editing/selection/inline-closest-leaf-child.html

        * rendering/RootInlineBox.cpp:
        (WebCore::RootInlineBox::closestLeafChildForXPos): Return the last leaf if
        it's the closest match, or if no other leaf matches (for example if all
        leaves are list markers or non-editable where editable is required).



Canonical link: https://commits.webkit.org/19550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24999 268f45cc-cd09-0410-ab3c-d52691b4dbfc